# VintageManiaBot

./: .gitignore  README.md  main.py  pyproject.toml
ebay/: ebay_call.py  ebay_token.py
handlers/: admin.py  data_erasure.py  mailing.py  role_check.py  start_stop.py  support.py  user.py
logs/: mylogging.py
settings/: app.py  background_objects.py  background_tasks.py  settings.py
utils/: ai_validate_call_params.py  helpers.py
