[tool.poetry]
name = "vintagemaniabot"
version = "0.1.0"
description = "beta-version; test-mode"
authors = ["ani <125677472+anilev6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
